@@ -33,6 +33,7 @@
         <script src="js/background/handlers/profile.js"></script>
         <script src="js/background/handlers/suggest.js"></script>
         <script src="js/background/handlers/geo.js"></script>
+        <script src="js/background/omnibox.js"></script>
         <script src="js/background/init.js"></script>
     </body>
 </html>
