@@ -1,4 +1,5 @@
 0.48: (in development)
+    + Omnibox user search
 
 0.47:
     + User not found message in profile
